# obsidian-dict-sync

./: .editorconfig  .envrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Cargo.toml  Cross.toml  build.rs  config.toml  readme.md
.github/: dependabot.yaml  release-drafter.yml
.github/workflows/: ci.yaml  lint.yaml.disable  release-drafter.yml.disable  repo-labels.yaml  test.yaml.disable
config/: example.toml
docs/: build-notes.md
src/: build_info.rs  cli.rs  config.rs  main.rs  user_dictionary.rs
